
2012-10-29 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-19
	* Total input rate 1D plot
	* flashlist data for shipping cpu loads to DB

2012-10-11 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-18
	* EventInfo information
	* detect and print mismatch in dataset information
	* cleanup when Halting

2012-09-02 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-17
	* datasets rates (depends on Utilities,Modules,Processor changes)
	* fix a bug with integer division instead of FP

2012-08-28 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-16
	* correct normalization for projected CPU usage
	* correct weight factor for C6220 with 16 slave EP's
	* removed histograms for BUFUs with 22 slave EP's
	* histogram for busy from /proc/stat
	* two tables with uncorrected CPU usage
	* update runNumber in title before writing files
	* save also time-based root files for DQM archiving

2012-08-21 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-15
	* dqm output files writable by default
	  (so that archiving script can delete them after it is done)

2012-08-21 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-14
	* fix deleting dequeues
	* make a copy of module statistics before applying sort
	* destroying Streams histograms on Stop

2012-08-20 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-13
	* catching all kinds of exception in postEntry(iChoke)
	* implement output (stream) rates

2012-07-20 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-12
	* bugfixes
	* use time form last update instead of fixed 23 sec interval

2012-07-13 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-11
	* dqmEnabled --> false by default
	* fixed rolling plots bug
	* check if collector port is a number
	* fixed filling wrong row in module time spent histograms
	* refill whole row when new item added in module time
	* lsStat and lsCommonStat list is now allocated on heap (avoids extra copy)